--- a/style.css
+++ b/style.css
@@ -86,15 +86,16 @@ body {
     height: 100vh
 }
   
-  .content {
-    margin:200px auto;
-   width:100%;
+  .container {
+    margin: 200px auto;
+
+    width: 100%;
     position: relative;
     z-index: 1;
-    background:rgb(0, 0, 0);
-    padding:100px 0
+    background: rgb(0, 0, 0);
+    padding: 30px 0 180px;
   }
-  .container {
+  .content {
     max-width:800px;
     margin:0 auto
   }
@@ -105,7 +106,7 @@ body {
   }
 
   p {
-      font-size: 25px;
+      font-size: 18px;
       font-weight: bold;
   }
 
@@ -130,6 +131,16 @@ body {
     border: 0;
     width: 100%;
     height: 15px;
+}
+
+progress::-webkit-progress-value {
+    background: #e415f9;
+    border-radius: 10px;
+}
+  
+progress::-webkit-progress-bar {
+    background: #000000;
+    border-radius: 10px;
 }
 
 .text {
@@ -175,7 +186,45 @@ a {
     padding-top: 27px;
 }
 
-.botaoo:hover {
+.botaoo:hover, .botao:hover {
     filter: invert();
 }
 
+.botao {
+    color: #ffffff;
+    border-radius: 28px;
+    font-weight: bold;
+    position: absolute;
+    z-index: 1;
+    width: 20%;
+    height: 3%;
+    background-color: #000000;
+    padding-top: 13px;
+    left: 39%;
+    top: 86%;
+    border: 6px #e415f9 outset;
+}
+
+.centralizar {
+    padding: 0 20%;
+}
+
+.container2 {
+    margin: 200px auto;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    background: rgb(0, 0, 0);
+/*     padding: 20px 0 180px; */
+    padding: 200px 0;
+  }
+
+  .container3 {
+    margin: 200px auto;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+    background: rgb(0, 0, 0);
+    padding: 200px 0;
+    /* padding: 20px 0 180px; */
+  }
