--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ body {
     right: 0;
     top: 0;
     display: block;
-    background-image: url(images/matrix.webp);;
+    background-image: url(images/fundofinal-space.gif);
     background-size: cover;
     transform-origin: center center 0;
     transform:  translateZ(-1px) scale(2);
@@ -90,13 +90,14 @@ body {
 }
   
   .container {
-    margin: 200px auto;
-
-    width: 100%;
+    margin: 130px auto;
+    width: 90%;
     position: relative;
     z-index: 1;
     background: rgb(0, 0, 0);
-    padding: 30px 0 180px;
+    padding: 0px 0 85px;
+    border: 6px #e415f9 outset;
+    border-radius: 42px;
   }
   .content {
     max-width:800px;
@@ -105,8 +106,8 @@ body {
 
   h1 {
       font-size: 50px;
-      
-      color: white;
+      text-shadow: 2px 0 0 #e415f9, -2px 0 0 #e415f9, 0 2px 0 #e415f9, 0 -2px 0 #e415f9, 1px 1px #e415f9, -1px -1px 0 #e415f9, 1px -1px 0 #e415f9, -1px 1px 0 #e415f9;
+      color: black;
       text-shadow: 2px gray;
 /*       background-color:white; */
 /*     width: 30%;
@@ -126,6 +127,7 @@ h2 {
   p {
       font-size: 25px;
       color: white;
+      
       /* font-weight: bold; */
   }
 
@@ -181,7 +183,7 @@ li {
     font-weight: bold;
 }
 
-a {
+.btn-top {
     color: white;
     width: 1%;
     height: 20%;
@@ -191,16 +193,16 @@ a {
 
 .botaoo {
     color: white;
-    border-radius: 28px;
+    border-radius: 42px;
     font-weight: bold;
     font-size: 35px;
     position: absolute;
     z-index: 1;
-    width: 20%;
+    width: 25%;
     height: 5%;
     background-color: black;
     top: 100%;
-    left: 41%;
+    left: 37%;
     padding-top: 15px;
     padding-bottom: 10px;
     border: 6px #e415f9 inset;
@@ -212,7 +214,7 @@ a {
 
 .botao {
     color: #ffffff;
-    border-radius: 28px;
+    border-radius: 42px;
     font-weight: bold;
     font-size: 25px;
     position: absolute;
@@ -223,7 +225,7 @@ a {
     padding-top: 13px;
     padding-bottom: 15px;
     left: 39%;
-    top: 86%;
+    /* top: 89%; */
     border: 6px #e415f9 outset;
 }
 
@@ -232,22 +234,23 @@ a {
 }
 
 .container2 {
-    margin: 200px auto;
+    margin: 130px auto;
     width: 90%;
     position: relative;
     z-index: 1;
     background: rgb(0, 0, 0);
-/*     padding: 20px 0 180px; */
-    padding: 200px 0;
+    padding: 0px 0 85px;
+    border: 6px #e415f9 outset;
+    border-radius: 42px;
   }
 
   .container3 {
-    margin: 200px auto;
+    /* margin: 200px auto; */
     width: 100%;
-    position: relative;
-    z-index: 1;
+     position: relative; 
+     z-index: 1; 
     background: rgb(0, 0, 0);
-    padding: 200px 0;
+    /* padding: 200px 0; */
     /* padding: 20px 0 180px; */
   }
 
@@ -264,11 +267,9 @@ a {
 
 }
 
-.light-div {
+.centralizarr {
     background-color: rgb(0, 0, 0);
     color: #ffffff;
-    padding: 5%;
-    display: block;
 }
 
 .items {
@@ -288,6 +289,19 @@ a {
     align-items: center;
     mix-blend-mode: normal;
     max-width: 786px;
-    border: 1px #ffffff solid;
+    /* border: 1px #ffffff solid; */
     object-fit: cover;
+    /* margin: auto; */
+    /* padding: 10px; */
+    border: 4px #e415f9 outset;
+    border-radius: 42px;
 }
+.contato {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    font-size: 25px;
+}
+
+
+
