--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ body {
     display: flex;
     justify-content: center;
     align-self: center;
-      /* font-weight: bolder; */ */
+      /* font-weight: bolder; */
   }
 h2 {
     font-size: 40px;
