--- a/style.css
+++ b/style.css
@@ -248,7 +248,7 @@ li {
     /* margin: 200px auto; */
     width: 100%;
      position: relative; 
-/*      z-index: 1;  */
+     z-index: 1; 
     background: rgb(0, 0, 0);
     /* padding: 200px 0; */
     /* padding: 20px 0 180px; */
